# ft245-bitbang-cli

./: CMakeLists.txt  README.md
.github/workflows/: macos.yml  ubuntu.yml  windows.yml
src/: main.cpp  platform.h  platform_posix.cpp  platform_win.cpp
